# genrl-fix

./: .gitignore  LICENSE  README.md  getting_started.ipynb  pyproject.toml
kubernetes/gsm8k/: hivemind.yaml  torch.yaml
kubernetes/multistage_math/: torch.yaml
kubernetes/rgym/: torch.yaml
kubernetes/testing/: test.yaml  test_hivemind.yaml
recipes/: gsm8k.yaml  text-2-image.yaml
recipes/gsm8k/: gsm8k-swarm.yaml  gsm8k.yaml  gsm8k_hivemind.yaml
recipes/multistage_math/: msm_bigmath_grpo.yaml  msm_dapodata_grpo.yaml  msm_gsm8k_grpo.yaml
recipes/reasoning_gym/: rg-swarm.yaml
recipes/rgym/: rg-swarm-torch.yaml  rg-swarm.yaml  rgym-torch.yaml
recipes/testing/: hivemind_test.yaml  test.yaml
recipes/vision/: text-2-image.yaml
scripts/: train.sh  train_hivemind.sh
src/genrl/blockchain/: __init__.py  connections.py  coordinator.py
src/genrl/common/: tokenizer_utils.py
src/genrl/communication/: __init__.py  communication.py
src/genrl/data/: __init__.py  data_manager.py  hf_data_manager.py  text_data_managers.py
src/genrl/game/: __init__.py  game_manager.py
src/genrl/logging_utils/: ml_logger.py  system_utils.py
src/genrl/misc_utils/: omega_random_resolver.py  utils.py
src/genrl/rewards/: __init__.py  reward_manager.py  reward_store.py  text_games_reward_utils.py
src/genrl/roles/: __init__.py  role_manager.py
src/genrl/runner/: hivemind_launcher.py  launcher.py  swarm_launcher.py
src/genrl/serialization/: game_tree.py
src/genrl/state/: __init__.py  game_state.py  game_tree.py
src/genrl/testing/: testing_utils.py
src/genrl/trainer/: GRPOTrainer.py  base_trainer.py  grpo_trainer.py
src/genrl_swarm/blockchain/: coordinator.py
src/genrl_swarm/common/: search.py
src/genrl_swarm/communication/: __init__.py  communication.py
src/genrl_swarm/data/: __init__.py  data_manager.py  text_data_managers.py
src/genrl_swarm/game/: __init__.py  game_manager.py
test/common/: test_search.py
test/data/: test_hf_data_manager.py
test/rewards/: test_reward_manager.py  test_reward_store.py
test/serialization/: test_game_tree.py  test_serialization.py
test/state/: test_game_state.py  test_game_tree.py
(+58 files in other folders)
