[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools_scm]

[project]
name = "genrl_swarm"
dynamic = ["version"]
description = "A General RL framerwork in a swarm environment"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch",
    "numpy",
    "hydra-core",
    "datasets",
    "transformers",
    "tensorboard",
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "pytest",
]

examples = ["trl"]
